tests/lime/fail/labels/label_def_no_dot.wsa
; Fails at the colon
hello:
